apps/production/vaultwarden/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  template:
    spec:
      containers:
        - name: vaultwarden
